# softgre

./: .gitignore  AUTHORS  COPYING  ChangeLog  Dockerfile  Makefile.am  Makefile.in  README.md  TODO.md  TODO.pt_BR  autogen.sh  configure  configure.ac
contrib/www/: index.php
contrib/www/api/: .htaccess  Rest.inc.php  main.php
contrib/www/include/: PHPTail.php
debian/: README.Debian  control  files  rules  softgre.substvars  softgred.default  softgred.init  softgred.postinst  softgred.postrm  softgred.prerm  softgred.substvars
share/: Makefile.am  dashboard.mk
share/apache/: softgred.conf
share/etc/apache/: softgred.conf.in
share/etc/softgred/: softgred.conf.in
share/scripts/: gen-dist-dashboard.sh
share/webinterface/: README.api  api.php  api.php.in  config.default.php  config.php.in  index.php  webinterface_config.php.in  wrapper.php
share/webinterface/dashboard/: Gruntfile.js  Makefile  bower.json  package.json
share/webinterface/dashboard/app/: index.html
share/webinterface/dashboard/app/scripts/: app.js
share/webinterface/dashboard/app/scripts/controllers/: main.js
share/webinterface/dashboard/app/styles/: main.css
share/webinterface/dashboard/app/views/: main.html
share/webinterface/dashboard/test/spec/controllers/: main.js
share/webinterface/lib/: Helper.inc.php  PHPTail.php  Rest.inc.php
share/www/: index.php
share/www/api/: README  index.php
share/www/lib/: PHPTail.php  Rest.inc.php
src/: general.h  helper.c  helper.h  iface_bridge.c  iface_bridge.h  iface_ebtables.c  iface_ebtables.h  iface_gre.c  iface_gre.h  iface_vlan.c  iface_vlan.h  log.c  log.h  payload.c  payload.h  provision.c  provision.h  service.c  service.h  service_cmd.c  service_cmd.h  softgred.c  softgred.h  softgred_config.c  softgred_config.h  softgred_service.c  softgred_service.h
